--- a/.golangci.yml
+++ b/.golangci.yml
@@ -364,3 +364,17 @@ issues:
     - path: "internal/services/emails_service_test.go"
       linters:
         - gochecknoglobals
+    - path: "cmd/server/server.go"
+      linters:
+        - funlen
+    - path: "internal/repositories/sso_repository.go"
+      linters:
+        - protogetter # to be able using optional fields like *string
+    - path: "internal/clients/sso/grpc/client.go"
+      linters:
+        - gosec
+    - path: "internal/senders/email.go"
+      linters:
+        - ineffassign
+        - staticcheck
+        - wastedassign
