[HMTM-98] - change password

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -378,3 +378,6 @@ issues:
         - ineffassign
         - staticcheck
         - wastedassign
+    - path: "cmd/server/server.go"
+      linters:
+        - cyclop
